
2009-10-09  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdb.py: Fix crash when running without a console.
	* vim.py netbeans.py debugger.py: Split the current Vim window and
	display the variables window after running the ``Cdbgvar`` command.
	* setup.py: Fix a 'debugger' name conflict in the installation over a
	previous version 0.7.
	* netbeans.py debugger.py gdb.py: Minimize Vim screen redraws when
	updating the debugger console window.
	* gdb.py: On quitting, do not query some gdb info when no project
	file is defined.
	* asyncproc.py evtloop.py: Do use threading.Event, the low performance
	is actually caused by thread starvation: insert a sleep(). No change
	on Windows performance.
	* asyncproc.py evtloop.py: Do not use threading.Event and improve
	select emulation performance on linux.
	* netbeans.py: Fix netbeans.remove_bug is a string, not a boolean.
	* gdbmi.py: Fix content of gdbmi results within quotes must be
	unquoted.
	* misc.py: Fix quoted command line arguments are not properly parsed.
	* vim.py: Replace the `vimcmd` environment variable with the
	`EDITOR` environment variable.
	* vim.py gdb.py debugger.py: Jobs and their scheduling time are queued
	in an heap queue, and processed by the dispatch loop.
	* debugger.py gdb.py simple.py: Remove the following methods from the
	netbeans api and the Debugger class: cmd_dbgvar, cmd_delvar,
	cmd_sigint and cmd_symcompletion.
	* buffer.py gdb.py misc.py netbeans.py vim.py: Replace assert with
	exceptions in BufferSet.
	* all files: Clean up the python debugger interface and use pydoc to
	document it.
	* setup.py: The Fedora Core 9 distribution is missing the Python
	standard library test.regrtest module.
	* pyclewn_install.py: Change gdb Windows pathname in shortcut.

===============================================================================
2009-04-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* setup.py: Fix test suite does not run with python2.6. Test suite